<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/m_telegram_channel"
        android:icon="@drawable/ic_telegram_icon"
        android:title="@string/tv_telegram_channel" />

    <item
        android:id="@+id/m_contact_us"
        android:icon="@drawable/ic_contacts_us"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/m_share"
        android:icon="@drawable/ic_share"
        android:title="@string/tv_share" />

    <item
        android:id="@+id/m_rate"
        android:icon="@drawable/ic_rate"
        android:title="@string/tv_rate" />

    <item
        android:id="@+id/m_more_apps"
        android:icon="@drawable/ic_more_apps"
        android:title="@string/tv_more_apps" />

    <item
        android:id="@+id/m_about"
        android:icon="@drawable/ic_info"
        android:title="@string/tv_about" />

</menu>