<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.banner.BannerFragment">

    <!--    bg blue-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <!--    bg white-->
    <View
        android:id="@+id/v_white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_with_top_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <!--    top card view-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark_blue"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintWidth_percent="0.85">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/yellow"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="14dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:cardBackgroundColor="@color/yellow"
                        app:cardCornerRadius="999dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="12dp"
                            android:src="@drawable/ic_phone" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_minute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="10 MIN"
                        android:textColor="@color/yellow"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:cardBackgroundColor="@color/yellow"
                        app:cardCornerRadius="999dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:src="@drawable/ic_globus" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_mb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="10 MB"
                        android:textColor="@color/yellow"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:cardBackgroundColor="@color/yellow"
                        app:cardCornerRadius="999dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="13dp"
                            android:src="@drawable/ic_sms" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="10 SMS"
                        android:textColor="@color/yellow"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oyiga 10 000 so`m"
                android:textColor="@color/light_blue"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--    main section-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cv_top"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="@id/cv_top"
        app:layout_constraintTop_toBottomOf="@id/cv_top"
        app:layout_constraintVertical_bias="0">

        <!--        main tariff name-->
        <TextView
            android:id="@+id/tv_tariff_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Tarif 'Oddiy 10'"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <!--        text user cost-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/tv_user_cost"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <!--        cost-->
            <TextView
                android:id="@+id/tv_tariff_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:background="@color/gray" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="14dp"
            android:scrollbars="none"
            android:layout_height="match_parent">

            <!--        text about-->
            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Short description"
                android:textColor="@color/gray"
                android:textSize="13sp" />

        </ScrollView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_more_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/cv_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        app:layout_constraintWidth_percent="0.4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/tv_more_info"
            android:textColor="@color/text_color2"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_more_info"
        app:layout_constraintEnd_toEndOf="@id/cv_top"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/tv_connect"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>